	PR ld/12152 	* elfxx-sparc.c (_bfd_sparc_elf_relocate_section): Also ignore 	overflows for R_SPARC_UA32 in .stab sections.